--- a/portfolio.html
+++ b/portfolio.html
@@ -159,7 +159,7 @@
 
     <!--подвал-->
     <footer class="footer-bg">
-        <div class="container ">
+        <div class="container footer-main">
             <div class="footer-block">
                 <a class="logo footer-logo" href="./index.html"><span class="logo-style">Web</span>Studio</a>
                 <ul class="list footer-list">
@@ -208,10 +208,10 @@
                 </ul>
             </div>
             <div class="footer-block">
-                <p class="footer-social">Подпишитесь на рассылку</p>
+                <p class="footer-text">Подпишитесь на рассылку</p>
                 <form class="footer-input">
                     <input type="email" name="mail" placeholder="E-mail" required class="input-field">
-                    <button type="submit" class=" footer-button text-button">Подписаться<svg class="send">
+                    <button type="submit" class="button button-text">Подписаться<svg class="send">
                             <use href="./images/modal.svg#icon-send"></use>
                         </svg>
                     </button>
