--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <!--подвал-->
    
     <footer class="footer-bg">
-        <div class="container ">
+        <div class="container footer-main">
             <div class="footer-block">
                 <a class="logo footer-logo" href="./index.html"><span class="logo-style">Web</span>Studio</a>
                 <ul class="list footer-list">
@@ -310,10 +310,10 @@
                 </ul>
             </div>
             <div class="footer-block">
-                <p class="footer-social">Подпишитесь на рассылку</p>
+                <p class="footer-text">Подпишитесь на рассылку</p>
                 <form class="footer-input">
                     <input type="email" name="mail" placeholder="E-mail" required class="input-field">
-                    <button type="submit" class=" footer-button text-button">Подписаться<svg class="send">
+                    <button type="submit" class="button button-text">Подписаться<svg class="send">
                             <use href="./images/modal.svg#icon-send"></use>
                         </svg>
                     </button>
@@ -321,6 +321,7 @@
             </div>
         </div>
     </footer>
+    <!--modal-->
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <button class="modal-btn" data-modal-close>&#x2715;</button>
@@ -329,7 +330,7 @@
             <label for="name" class="label-modal">Имя</label>
             <div class="conteiner-input">
                 <input type="text" name="name" required class="form-input" id="name" />
-                <svg class="icon-form" width="12" height="12">
+                <svg class="icon-form" width="18" height="18">
                     <use href="./images/modal.svg#icon-person-modal"></use>
                 </svg>
             </div>
@@ -337,29 +338,33 @@
             <div class="conteiner-input">
                 <input type="tel" name="tel" id="tel" required placeholder="+380** - *** - ** - **"
                     class="form-input" />
-                <svg class="icon-form" width="13" height="13">
+                <svg class="icon-form" width="18" height="18">
                     <use href="./images/modal.svg#icon-phone-modal"></use>
                 </svg>
             </div>
             <label for="mail" class="label-modal">Почта</label>
             <div class="conteiner-input">
                 <input type="email" name="email" required class="form-input" id="mail" />
-                <svg class="icon-form" width="15" height="12">
+                <svg class="icon-form" width="18" height="18">
                     <use href="./images/modal.svg#icon-email-modal"></use>
                 </svg>
             </div>
             <label class="label-modal">Комментарий
                 <textarea name="Комментарий" rows="6" placeholder="Введите текст..."></textarea>
             </label>
+            
             <div class="agreement">
                 <label class="agreement-label">
-                    <input type="checkbox" name="text" value="" /> Соглашаюсь с рассылкой и принимаю <a href=""
-                        target="_blank" rel="noopener noreferrer" class="contract">Условия договора</a>
-                </label>
+                    <input class="checkbox-modal visually-hidden" type="checkbox" name="police" value="i-agree">
+                    <span class="icon-checkbox"></span>
+                    <span class="text-checkbox"> Соглашаюсь с рассылкой и принимаю</span>
+                    <a href="" class="checkbox-link"> Условия договора</a>
+                </label>  
+                <button type="submit" class="button button-text modal-button">Отправить</button>
             </div>
-            <button type="submit" class="main-button">Отправить</button>
         </form>
     </div>
+    
 </div>
 
 
